feat: added the home page + responsive code :sparkles:

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <header>
             <div class="navbar">
                 <div class="logo">
-                    <a href="#">
+                    <a href="home">
                         <img src="/assets/ln_logo_header_semfundo.png">
                         LN Consultoria Contábil
                     </a>
                 </div>
                 <ul class="links">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="home">Home</a></li>
                     <li><a href="sobre">Sobre</a></li>
                     <li><a href="contatos">Contatos</a></li>
                 </ul>
@@ -44,6 +44,42 @@
             </div>
         </header>
 
+        <main>
+            <section id="home">
+                <div class="arabesco">
+                    <img src="/assets/arabesco_home.png">
+                </div>
+                <div class="imagem_home">
+                    <img src="/assets/imagem_bem-vindo_home.png">
+                </div>
+                <div class="texto">
+                    <p>É com grande satisfação que hoje, temos o privilégio de
+                        apresentar a LN Consultoria Contábil. Uma empresa
+                        que nasceu da paixão pela contabilidade e do
+                        compromisso com a excelência em serviços.
+                        Gostaríamos de compartilhar um pouco sobre nossa história
+                        e como estamos transformando a contabilidade em uma
+                        ferramenta estratégica para o sucesso dos nossos clientes.<br><br>
+                        A LN Consultoria Contábil é o resultado da visão de um
+                        contador apaixonado e experiente, que ao longo de
+                        mais de uma década na área contábil, testemunhou as
+                        mudanças no mundo dos negócios e reconheceu a
+                        necessidade de soluções inovadoras. Somos um
+                        parceiro estratégico dedicado a simplificar a
+                        complexidade financeira e impulsionar o sucesso
+                        empresarial.</p>
+                    <div class="botoes">
+                        <h4>Faça parte desse <i>time</i> !</h4>
+                        <a href="https://wa.me/message/J77RZCKMBVUSM1">
+                            <button class="button-85" role="button">Whatsapp <img src="/assets/whatsapp-svgrepo-com.svg"></button>
+                        </a>
+                        <a href="https://www.instagram.com/ln_consultoriacontabil/">
+                            <button class="button-85" role="button">Instagram <img src="/assets/instagram-2-1-logo-svgrepo-com.svg"></button>
+                        </a>
+                    </div>
+                </div>
+            </section>
+        </main>
         <script>
             const toggleBtn = document.querySelector('.toggle_btn')
             const toggleBtnIcon = document.querySelector('.toggle_btn i')
