feat: correcting the routes for index.html + excluding extra <main> :clown_face:

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <header>
             <div class="navbar">
                 <div class="logo">
-                    <a href="home">
+                    <a href="#">
                         <img src="/assets/ln_logo_header_semfundo.png">
                         LN Consultoria Contábil
                     </a>
                 </div>
                 <ul class="links">
-                    <li><a href="home">Home</a></li>
+                    <li><a href="#">Home</a></li>
                     <li><a href="sobre">Sobre</a></li>
                     <li><a href="contatos">Contatos</a></li>
                 </ul>
@@ -38,7 +38,7 @@
             </div>
 
             <div class="dropdown_menu">
-                <li><a href="home">Home</a></li>
+                <li><a href="#">Home</a></li>
                 <li><a href="sobre">Sobre</a></li>
                 <li><a href="contatos">Contatos</a></li>
             </div>
@@ -98,9 +98,5 @@
                 }
             }
         </script>
-
-        <main>
-
-        </main>
     </body>
 </html>
